--- a/css/contactus.css
+++ b/css/contactus.css
@@ -190,3 +190,24 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+@media screen and (min-width:200px)and (max-width: 480px) {
+  header h1{
+    padding: .25em;
+  }
+  
+}
+@media screen and (min-width:481px)and (max-width: 768px){
+  header h1{
+    padding: .6em;
+    text-align: center;
+  }
+}
+@media screen and (min-width:200px) {
+  header.header, ul.main-nav{
+    display: flex;
+  }
+  .header{
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
