--- a/css/more.css
+++ b/css/more.css
@@ -119,3 +119,59 @@ div.container{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-variant: small-caps;
   }
+  @media screen and (min-width:200px)and (max-width: 480px) {
+    header h1{
+      padding: .25em;
+    }
+    nav{
+      font-size: 1.3em;
+      width: 80%;
+      margin: 0 auto;
+    }
+    nav ul{
+      margin:0;
+      padding: .1em;
+    }
+    nav li{
+      background-color: #a3716b;
+      list-style-type: none;
+      width: 100%;
+      margin-bottom: 1em;
+      text-align: center;
+    }
+    
+  }
+  @media screen and (min-width:481px)and (max-width: 768px){
+    header h1{
+      padding: .6em;
+      text-align: center;
+    }
+    nav{
+      background-color: #8e7976;
+      font-size: 1.4em;
+      margin: 0%;
+      padding: 0;
+      text-align: center;
+    }
+    nav ul{
+      margin: 0%;
+      padding: 0%;
+    }
+    nav li{
+      display: inline;
+    }
+    nav a{
+      display: inline-block;
+      padding: 1em;
+      text-decoration: none;
+    }
+  }
+  @media screen and (min-width:200px) {
+    header.header, ul.main-nav{
+      display: flex;
+    }
+    .header{
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
+  }
